--- a/webtools/partytool/webroot/css/main.css
+++ b/webtools/partytool/webroot/css/main.css
@@ -21,6 +21,8 @@
   margin: 5px 0 5px 0;
 }
 
+.att { color: #d4d4d4; }
+
 #f-left {
   width: 75%;
   float: left;
@@ -89,133 +91,133 @@
 .comment-tag { font-size: 75%; }
 
 h1 { border-bottom: 1px solid #ccc;
-	margin-bottom: 0;}
+  margin-bottom: 0;}
   
 #footer { padding: 30px 0 20px 0; }
 
 img { border: none }
 
 body {
-	background: #fff url("../img/body_back.png") top repeat-x;
-	color: #555;
-	font-family: arial, sans-serif;
-	margin: 0 10px;
-	padding: 0;
-	font-size:    x-small;
-	voice-family: "\"}\"";
-	voice-family: inherit;
-	font-size:    small;
+  background: #fff url("../img/body_back.png") top repeat-x;
+  color: #555;
+  font-family: arial, sans-serif;
+  margin: 0 10px;
+  padding: 0;
+  font-size:    x-small;
+  voice-family: "\"}\"";
+  voice-family: inherit;
+  font-size:    small;
 }
 
 a { color: #34518c; text-decoration: none; }
 a:hover { text-decoration: underline; }
 
 #container {
-	width: 740px;
-	margin: 0 auto;
+  width: 740px;
+  margin: 0 auto;
 }
 
 #mozilla-com a {
-	float: right;
-	display: block;
-	text-indent: -5000em;
-	width: 110px;
-	height: 25px;
-	text-decoration: none;
-	background: url("../img/mozilla-org.png") no-repeat;
+  float: right;
+  display: block;
+  text-indent: -5000em;
+  width: 110px;
+  height: 25px;
+  text-decoration: none;
+  background: url("../img/mozilla-org.png") no-repeat;
 }
 
 #key-menu {
-	background: #B2C1C8 url("../img/header-bottom.gif") 0 100% no-repeat;
-	padding: 0 0 10px 0;
-	overflow: auto;
-	margin-bottom: 1em;
+  background: #B2C1C8 url("../img/header-bottom.gif") 0 100% no-repeat;
+  padding: 0 0 10px 0;
+  overflow: auto;
+  margin-bottom: 1em;
 }
 
 * html #key-menu {
-	overflow: visible;
-	height: 1px;
+  overflow: visible;
+  height: 1px;
 }
 
 #key-menu ul, #key-menu li {
-	margin: 0;
-	padding: 0;
-	list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 #key-menu ul {
-	padding: 14px 12px 0 12px;
-	background: url("../img/header-top.gif") 0 0 no-repeat;
+  padding: 14px 12px 0 12px;
+  background: url("../img/header-top.gif") 0 0 no-repeat;
 }
 
 #key-menu li {
-	float: left;
-	background: url("../img/tabs.gif") 100% -50px;
-	padding-right: 5px;
-	margin-right: 2px;
-	border-bottom: 1px solid #849CA4;
-	margin-bottom: -10px;
+  float: left;
+  background: url("../img/tabs.gif") 100% -50px;
+  padding-right: 5px;
+  margin-right: 2px;
+  border-bottom: 1px solid #849CA4;
+  margin-bottom: -10px;
 }
 
 #key-menu li a, #key-menu li span {
-	display: block;
-	float: left;
-	padding: 3px 15px 2px 20px;
-	background: url("../img/tabs.gif") 0 -50px;
-	color: #5A7CBA;
-	text-decoration: none;
+  display: block;
+  float: left;
+  padding: 3px 15px 2px 20px;
+  background: url("../img/tabs.gif") 0 -50px;
+  color: #5A7CBA;
+  text-decoration: none;
 }
 
 #key-menu li:hover a {
-	background-position: 0 -100px;
+  background-position: 0 -100px;
 }
 
 #key-menu li:hover {
-	background-position: 100% -100px;
+  background-position: 100% -100px;
 }
 
 #key-menu li.current {
-	background: url("../img/tabs.gif") 100% 0;
-	border-bottom-color: white;
+  background: url("../img/tabs.gif") 100% 0;
+  border-bottom-color: white;
 }
 
 #key-menu li.current a, #key-menu li.current span {
-	background: url("../img/tabs.gif") 0 0;
-	color: #999;
+  background: url("../img/tabs.gif") 0 0;
+  color: #999;
 }
 
 #key-menu a:focus { outline: none; }
 
 #header {
-	clear: both;
-	padding-top: 40px;
-	position: relative;
+  clear: both;
+  padding-top: 40px;
+  position: relative;
 } * html #header { padding-top: 20px; }
 
 #header h1 {
-	height: 46px;
-	margin: 0;
-	font-size: 2px;
-	position: absolute;
-	top: 0;
-	left: -4px;
-	border: none;
-	z-index: 5000;
+  height: 46px;
+  margin: 0;
+  font-size: 2px;
+  position: absolute;
+  top: 0;
+  left: -4px;
+  border: none;
+  z-index: 5000;
 }
 
 #user {
-	position: absolute;
-	right: 0;
-	top: 9px;
-	margin-left: 200px;
-	font-family: tahoma, arial, sans-serif;
-	font-size: 95%;
+  position: absolute;
+  right: 0;
+  top: 9px;
+  margin-left: 200px;
+  font-family: tahoma, arial, sans-serif;
+  font-size: 95%;
 }
 
 .skipLink {
-	position: absolute;
-	left: -1200px;
-	width: 990px;
+  position: absolute;
+  left: -1200px;
+  width: 990px;
 }
 
 #map {
