Bug 356256: Missing word 'are' in email notification - Patch by victory(_RSZ_) <bmo2007@rsz.jp> r=mkanat a=justdave

--- a/webtools/bugzilla/template/en/default/email/newchangedmail.txt.tmpl
+++ b/webtools/bugzilla/template/en/default/email/newchangedmail.txt.tmpl
@@ -63,7 +63,7 @@ You are a voter for the [% terms.bug %].
     [% CASE constants.REL_ASSIGNEE %]
 You are watching the assignee of the [% terms.bug %].
     [% CASE constants.REL_REPORTER %]
-You watching the reporter.
+You are watching the reporter.
     [% CASE constants.REL_QA %]
 You are watching the QA contact of the [% terms.bug %].
     [% CASE constants.REL_CC %]
