--- a/webtools/testopia/template/en/default/testopia/case/show.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/case/show.html.tmpl
@@ -169,6 +169,9 @@
         <input type="submit" name="action" value="Commit">
         <input type="submit" name="action" value="History">
         <input type="submit" name="action" value="Clone">
+      [% IF case.candelete %]
+        <input type="submit" name="action" value="Delete">
+      [% END %]
       </div></td>
     </tr>
   </tbody>
