--- a/webtools/testopia/template/en/default/testopia/plan/show.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/plan/show.html.tmpl
@@ -160,6 +160,9 @@
         <input type="submit" name="action" value="History">
         <input type="submit" name="action" value="Clone">
         <input type="submit" name="action" value="Print">
+      [% IF plan.candelete %]
+        <input type="submit" name="action" value="Delete">
+      [% END %]
       </div></td>
     </tr>
   </tbody>
