--- a/webtools/bugzilla/template/en/default/admin/classifications/edit.html.tmpl
+++ b/webtools/bugzilla/template/en/default/admin/classifications/edit.html.tmpl
@@ -59,7 +59,7 @@
                 <th align=right valign=top>[% product.name FILTER html %]</th>
                 <td valign=top>
                   [% IF product.description %]
-                    [% product.description FILTER none %]
+                    [% product.description FILTER html_light %]
                   [% ELSE %]
                     <font color="red">description missing</font>
                   [% END %]
