--- a/webtools/bugzilla/template/en/default/admin/groups/list.html.tmpl
+++ b/webtools/bugzilla/template/en/default/admin/groups/list.html.tmpl
@@ -47,6 +47,7 @@
    }
    {name               => 'description'
     heading            => 'Description'
+    allow_html_content => 1
    }
    {name               => 'userregexp'
     heading            => 'User RegExp'
