--- a/webtools/bugzilla/template/en/default/admin/keywords/list.html.tmpl
+++ b/webtools/bugzilla/template/en/default/admin/keywords/list.html.tmpl
@@ -43,7 +43,8 @@
      },
      { 
        name => "description"
-       heading => "Description" 
+       heading => "Description"
+       allow_html_content => 1
      },
      { 
        name => "bug_count"
