--- a/webtools/bugzilla/template/en/default/admin/classifications/del.html.tmpl
+++ b/webtools/bugzilla/template/en/default/admin/classifications/del.html.tmpl
@@ -36,7 +36,7 @@
   <td valign="top">Description:</td>
   <td valign="top">
     [% IF classification.description %]
-      [% classification.description FILTER none %]
+      [% classification.description FILTER html_light %]
     [% ELSE %]
       <font color="red">description missing</font>
     [% END %]
