--- a/webtools/bugzilla/template/en/default/admin/flag-type/edit.html.tmpl
+++ b/webtools/bugzilla/template/en/default/admin/flag-type/edit.html.tmpl
@@ -35,9 +35,9 @@
 [% END %]
 
 [% IF last_action == "copy" %]
-  [% title = "Create Flag Type Based on $type.name" %]
+  [% title = BLOCK %]Create Flag Type Based on [% type.name FILTER html %][% END %]
 [% ELSIF last_action == "edit" %]
-  [% title = "Edit Flag Type $type.name" %]
+  [% title = BLOCK %]Edit Flag Type [% type.name FILTER html %][% END %]
 [% END %]
 
 [% PROCESS global/header.html.tmpl
