--- a/webtools/bugzilla/template/en/default/bug/show.html.tmpl
+++ b/webtools/bugzilla/template/en/default/bug/show.html.tmpl
@@ -31,7 +31,7 @@
   [% filtered_desc = bug.short_desc FILTER html %]
   [% filtered_timestamp = bug.delta_ts FILTER time %]
   [% PROCESS global/header.html.tmpl
-    title = "$terms.Bug $bug.bug_id - $bug.short_desc"
+    title = "$terms.Bug $bug.bug_id - $filtered_desc"
     h1 = "$terms.Bug&nbsp;$bug.bug_id"
     h2 = filtered_desc
     h3 = "Last modified: $filtered_timestamp"
